fix anggota in lembaga

--- a/app/src/main/res/layout/activity_organisasi.xml
+++ b/app/src/main/res/layout/activity_organisasi.xml
@@ -47,6 +47,7 @@
     </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_organisasi"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_toolbar_organisasi">
@@ -57,6 +58,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/rl_toolbar_organisasi"
             android:layout_marginTop="5dp"
+            tools:itemCount="3"
             tools:listitem="@layout/item_organisasi" />
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
