--- a/app/src/main/res/layout/fragment_foto_lembaga.xml
+++ b/app/src/main/res/layout/fragment_foto_lembaga.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/swipe_refresh"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/colorBackgroundActivity"
     android:layout_height="match_parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_foto"
+        android:layout_width="match_parent"
+        tools:listitem="@layout/item_foto"
+        android:layout_height="wrap_content"/>
+
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
