--- a/app/src/main/res/layout/fragment_foto_lembaga.xml
+++ b/app/src/main/res/layout/fragment_foto_lembaga.xml
@@ -1,16 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:id="@+id/swipe_refresh"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/colorBackgroundActivity"
-    android:layout_height="match_parent">
+    android:id="@+id/swipe_refresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorBackgroundActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_foto"
+    <RelativeLayout
         android:layout_width="match_parent"
-        tools:listitem="@layout/item_foto"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_foto"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <LinearLayout
+            android:id="@+id/ll_empty"
+            android:layout_width="wrap_content"
+            android:gravity="center"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true">
+
+            <ImageView
+                android:layout_width="200dp"
+                android:layout_height="150dp"
+                android:src="@drawable/empty_image" />
+
+            <TextView
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                android:text="Tidak ada foto"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
