--- a/app/src/main/res/layout/fragment_saya.xml
+++ b/app/src/main/res/layout/fragment_saya.xml
@@ -90,6 +90,7 @@
                                             <ImageView
                                                 android:id="@+id/img_photo_card_detail_mahasiswa"
                                                 android:layout_width="match_parent"
+                                                android:scaleType="centerCrop"
                                                 android:layout_height="match_parent"
                                                 android:src="@drawable/ic_man_photo_default" />
 
