--- a/app/src/main/res/layout/activity_login_tamu.xml
+++ b/app/src/main/res/layout/activity_login_tamu.xml
@@ -98,7 +98,9 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:textColorHint="@color/white"
+        app:endIconMode="password_toggle"
         app:boxStrokeColor="@color/white"
+        app:endIconTint="@color/white"
         app:hintTextColor="@color/white"
         app:startIconTint="@color/white">
 
