--- a/app/src/main/res/layout/activity_main_recruiter.xml
+++ b/app/src/main/res/layout/activity_main_recruiter.xml
@@ -5,23 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackgroundActivity"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.MainRecruiterActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottomNavigationView"
+        android:id="@+id/bottomNavigationViewRecruiter"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        app:menu="@menu/bottom_nav_menu" />
+        app:menu="@menu/bottom_nav_menu_recruiter" />
 
     <fragment
-        android:id="@+id/nav_host_fragment"
+        android:id="@+id/nav_host_fragment_recruiter"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottomNavigationView"
+        android:layout_above="@id/bottomNavigationViewRecruiter"
         app:defaultNavHost="true"
-        app:navGraph="@navigation/nav_graph" />
-
+        app:navGraph="@navigation/nav_graph_recruiter" />
 
 </RelativeLayout>
