--- a/app/src/main/res/layout/activity_masuk.xml
+++ b/app/src/main/res/layout/activity_masuk.xml
@@ -63,7 +63,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Tamu"
+            android:text="Recruiter"
             android:textColor="@color/colorPrimary"
             android:textSize="14sp"
             android:textStyle="bold" />
