--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,5 +24,6 @@
     <color name="grey_hint">#808080</color>
     <color name="grey">#4D4D4D</color>
     <color name="greyTrans10">#1A4D4D4D</color>
+    <color name="blueLink">#002ABA</color>
 
 </resources>
