--- a/app/src/main/res/layout/item_card_mahasiswa.xml
+++ b/app/src/main/res/layout/item_card_mahasiswa.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="300dp"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="10dp"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="16dp"
@@ -68,7 +69,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="2"
-            android:text="Muhammad Azwar Bahar"
+            tools:text="Muhammad Azwar Bahar"
             android:textColor="@color/black"
             android:textSize="16sp"
             android:textStyle="bold" />
@@ -83,7 +84,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="2"
-            android:text="Hafidz 30 Jus | Imam Masjid di Masjid Cheng Ho | Software Engineer | Backend Ktor/Spring"
+            tools:text="Hafidz 30 Jus | Imam Masjid di Masjid Cheng Ho | Software Engineer | Backend Ktor/Spring"
             android:textColor="@color/black"
             android:textSize="12sp" />
 
@@ -112,7 +113,7 @@
                 android:layout_below="@id/tv_motto_card_item_mahasiswa"
                 android:layout_marginLeft="5dp"
                 android:layout_toEndOf="@id/img_icon_jurusan_item_mahasiswa"
-                android:text="Sistem Informasi, Sains dan Teknologi"
+                tools:text="Sistem Informasi, Sains dan Teknologi"
                 android:textColor="@color/grey_hint"
                 android:textSize="10sp" />
 
@@ -140,7 +141,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:text="Makassar, Indonesia"
+                tools:text="Makassar, Indonesia"
                 android:textColor="@color/colorPrimary"
                 android:textSize="10sp" />
 
