--- a/app/src/main/res/layout/item_lamaran_mahasiswa.xml
+++ b/app/src/main/res/layout/item_lamaran_mahasiswa.xml
@@ -57,17 +57,17 @@
 
     <TextView
         android:id="@+id/tv_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_nama_mahasiswa"
+        android:layout_alignLeft="@id/tv_nama_lamaran"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/bg_primary_corner_6"
         android:paddingHorizontal="8dp"
         android:paddingVertical="2dp"
-        android:textSize="12sp"
-        android:layout_alignLeft="@id/tv_nama_lamaran"
-        android:layout_below="@id/tv_nama_mahasiswa"
-        android:textColor="@color/white"
-        android:background="@drawable/bg_primary_corner_6"
         android:text="New"
-        android:layout_marginTop="8dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:textColor="@color/white"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tv_tanggal"
