--- a/app/src/main/res/layout/activity_detail_postingan_loker.xml
+++ b/app/src/main/res/layout/activity_detail_postingan_loker.xml
@@ -35,6 +35,16 @@
             android:textColor="@color/white"
             android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/img_share"
+            android:src="@drawable/ic_baseline_share_24"
+            android:layout_marginHorizontal="16dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tint="@color/white" />
+
     </RelativeLayout>
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
