--- a/app/src/main/res/layout/activity_magang.xml
+++ b/app/src/main/res/layout/activity_magang.xml
@@ -35,68 +35,74 @@
             android:textColor="@color/white"
             android:textStyle="bold" />
 
-        <ImageView
-            android:id="@+id/img_search_magang"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginHorizontal="16dp"
-            android:src="@drawable/ic_search_alt" />
+<!--        <ImageView-->
+<!--            android:id="@+id/img_search_magang"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_alignParentRight="true"-->
+<!--            android:layout_centerVertical="true"-->
+<!--            android:layout_marginHorizontal="16dp"-->
+<!--            android:src="@drawable/ic_search_alt" />-->
 
     </RelativeLayout>
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/rl_toolbar_magang">
 
-        <RelativeLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv1_magang_bersertifikat"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="16dp"
-                android:text="Program Magang Mahasiswa Bersertifikat"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_magang_bersertifikat"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv1_magang_bersertifikat"
-                android:clipToPadding="false"
-                android:paddingLeft="16dp"
-                tools:itemCount="1"
-                tools:listitem="@layout/item_magang_bersertifikat" />
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tv1_magang_terbaru"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rv_magang_bersertifikat"
-                android:layout_marginHorizontal="16dp"
-                android:layout_marginTop="10dp"
-                android:text="Info Magang Terbaru"
-                android:textColor="@color/colorPrimary"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                <!--            <TextView-->
+                <!--                android:id="@+id/tv1_magang_bersertifikat"-->
+                <!--                android:layout_width="wrap_content"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:layout_marginHorizontal="16dp"-->
+                <!--                android:layout_marginTop="16dp"-->
+                <!--                android:text="Program Magang Mahasiswa Bersertifikat"-->
+                <!--                android:textColor="@color/colorPrimary"-->
+                <!--                android:textSize="14sp"-->
+                <!--                android:textStyle="bold" />-->
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_magang_terbaru"
-                android:layout_width="match_parent"
-                tools:listitem="@layout/item_magang_terbaru"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv1_magang_terbaru" />
+                <!--            <androidx.recyclerview.widget.RecyclerView-->
+                <!--                android:id="@+id/rv_magang_bersertifikat"-->
+                <!--                android:layout_width="match_parent"-->
+                <!--                android:layout_height="wrap_content"-->
+                <!--                android:layout_below="@id/tv1_magang_bersertifikat"-->
+                <!--                android:clipToPadding="false"-->
+                <!--                android:paddingLeft="16dp"-->
+                <!--                tools:itemCount="1"-->
+                <!--                tools:listitem="@layout/item_magang_bersertifikat" />-->
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv1_magang_terbaru"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="16dp"
+                    android:layout_marginTop="10dp"
+                    android:text="Info Magang Terbaru"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
 
-    </androidx.core.widget.NestedScrollView>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_magang_terbaru"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv1_magang_terbaru"
+                    tools:listitem="@layout/item_magang_terbaru" />
+
+            </RelativeLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </RelativeLayout>
