--- a/app/src/main/res/layout/item_beasiswa_terbaru_home.xml
+++ b/app/src/main/res/layout/item_beasiswa_terbaru_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="150dp"
+    android:layout_width="200dp"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="6dp"
     android:layout_marginVertical="10dp"
@@ -19,8 +19,8 @@
             android:layout_height="70dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:scaleType="centerInside"
-            android:src="@drawable/logo_bi" />
+            android:scaleType="centerCrop"
+            android:src="@drawable/header_lembaga_default" />
 
         <View
             android:id="@+id/view_item_beasiswa_terbaru_home"
